--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,11 @@
-image: node:alpine
-
 pages:
   stage: deploy
   script:
-  - npm install
-  - npm run build
-  - rm -rf public
-  - mv build public
+    - mkdir .public
+    - cp -r * .public
+    - mv .public public
   artifacts:
     paths:
-    - public # mandatory, other folder won't work
+      - public
   only:
-  - master # or dev, the branch you want to publish
+    - master
