--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "assessment---github-card",
+  "homepage": "https://tudy4300.gitlab.io/assessment---github-card",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
