--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,13 @@
+image: node:alpine
 pages:
   stage: deploy
   script:
-    - mkdir .public
-    - cp -r * .public
-    - mv .public public
+  - npm install
+  - npm run build
+  - rm -rf public
+  - mv build public
   artifacts:
     paths:
-      - public
+    - public
   only:
-    - master
+  - master
