--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
 image: node:alpine
+
 pages:
   stage: deploy
   script:
@@ -8,6 +9,6 @@ pages:
   - mv build public
   artifacts:
     paths:
-    - public
+    - public # mandatory, other folder won't work
   only:
-  - master
+  - master # or dev, the branch you want to publish
